- Added Crystallized Mana Shard to the loot table of Coldarra Mage Slayer for the quest Bait and Switch.
- Updated the flags of Crystallized Mana Shard to allow every member of a group to loot it.

[2022-05-02]
- Added Scarlet Onslaught Armor to the loot table of Onslaught Footman for the quest Materiel Plunder.
- Added Scarlet Onslaught Weapon to the loot table of Onslaught Workman for the quest Materiel Plunder.
- Updated the flags of Onslaught Armor to allow every member of a group to loot it.
- Updated the flags of Onslaught Weapon to allow every member of a group to loot it.
- Added Forgotten Treasure to the loot table of Forgotten Peasant for the quest Funding the War Effort.
- Updated the flags of Forgotten Treasure to allow every member of a group to loot it.
- Updated the respawn time of Scarlet Onslaught Daily Orders: Barracks.
- Updated the respawn time of Scarlet Onslaught Daily Orders: Abbey.
- Updated the respawn time of Scarlet Onslaught Daily Orders: Beach.
- Added Emerald Dragon Tear to the loot table of Emerald Lasher for the quest Emerald Dragon Tears.
- Updated the flags of Emerald Dragon Tear to allow every member of a group to loot it.
- Updated the respawn time of The Diary of High General Abbendis.

[2022-05-04]
- Added Shimmering Snowcap to the loot table of Ice Serpent for the quest Shimmercap Stew.
- Updated the flags of Shimmering Snowcap to allow every member of a group to loot it.
- Added Sweetroot to the loot table of Diseased Drakkari for the quest Shimmercap Stew.
- Updated the flags of Sweetroot to allow every member of a group to loot it.
- Added Waterweed Frond to the loot table of River Thresher for the quest Vial of Visions.
- Updated the flags of Waterweed Frond to allow every member of a group to loot it.
- Added Haze Leaf to the loot table of Tallhorn Stag for the quest Vial of Visions.
- Updated the flags of Haze Leaf to allow every member of a group to loot it.
- Updated the respawn time of Scourged Troll Mummy.