@@ -235,6 +235,14 @@ INSERT INTO `creature_questitem` (`CreatureEntry`, `Idx`, `ItemId`) VALUES (2761
 DELETE FROM `creature_questitem` WHERE `CreatureEntry`=26605 AND `ItemId`=36725;
 INSERT INTO `creature_questitem` (`CreatureEntry`, `Idx`, `ItemId`) VALUES (26605, 2, 36725);
 
+-- War Golem Part (Quest: From the Ground Up (Id: 12196))
+-- Runic War Golem
+DELETE FROM `creature_questitem` WHERE `CreatureEntry`=26347 AND `ItemId`=36852;
+INSERT INTO `creature_questitem` (`CreatureEntry`, `Idx`, `ItemId`) VALUES (26347, 2, 36852);
+-- Iron Rune-Smith
+DELETE FROM `creature_questitem` WHERE `CreatureEntry`=26408 AND `ItemId`=36852;
+INSERT INTO `creature_questitem` (`CreatureEntry`, `Idx`, `ItemId`) VALUES (26408, 4, 36852);
+
 -- Haze Leaf (Quest: Vial of Visions (Id: 12483))
 -- Tallhorn Stag
 DELETE FROM `creature_questitem` WHERE `CreatureEntry`=26363 AND `ItemId`=37085;
